# qplay

./: .gitignore  CMakeLists.txt  README.md
include/: Player.hpp  QPlayVentana.hpp  Qplay.hpp
src/: Player.cpp  Qplay.cpp  main.cpp
src/modelo/: Player.cpp
src/ui/: QPlayVentana.cpp
